create an AOPI
