# routes/api.php
@@ -13,20 +13,26 @@ Route::post('/send-otp', [AuthController::class, 'sendOTP']);
 Route::post('/verify-otp', [AuthController::class, 'verifyOTP']);
 Route::post('/register', [AuthController::class, 'register']);
 
+Route::get('/categories', [HomeController::class, 'getCategories']);
 
 Route::middleware('auth:sanctum')->group(function () {
 
+    Route::get('/profile', [AuthController::class, 'getProfile']);
     Route::put('/update-profile', [AuthController::class, 'updateProfile']);
     Route::put('/change-language', [AuthController::class, 'changeLanguage']);
 
     // home
-    Route::get('/categories', [HomeController::class, 'getCategories']);
     Route::get('/get-breaking-news', [HomeController::class, 'getBreakingNews']);
     Route::get('/get-trending-news', [HomeController::class, 'getTrendingNews']);
     Route::get('/news-details/{id}', [HomeController::class, 'getNewsDetails']);
+
+    // CATEGORY WISE NEWS
+    Route::get('/get-category-news/{id}', [HomeController::class, 'getCategoryNews']);
 
 
     // user
     Route::get('/my-interest', [AuthController::class, 'getMyInterest']);
     Route::put('/update-my-interest', [AuthController::class, 'updateMyInterest']);
+    Route::get('/video-news', [HomeController::class, 'getVideoNews']);
+    Route::get('/get-news/{slug}', [HomeController::class, 'getNewsBySlug']);
 });
